Fix issue #3, Optimizing image when no dive session,

--- a/Server-side/war/webclient/src/divesession/divesession_list_view.html
+++ b/Server-side/war/webclient/src/divesession/divesession_list_view.html
@@ -55,7 +55,7 @@
             </md-list>
        
         <!-- show a welcome card saying add the first dive session -->
-        <md-card ng-show="(fbStatus == 0) && (freediver.diveSessions.length<=0)"  >
+        <md-card ng-show="(fbStatus == 0) && (freediver.diveSessions.length<=0)"  layout-align="center center">
             <!--md-card-content>
                 <h4>There aren't dive session at the moment.</h4>
                 <h4>Use ADD button (+) in the bottom right corner, to add your first dive session.</h4>
