--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -181,7 +181,7 @@
                     
                     <!-- add dynamically all custom field defined for the dive -->
                     
-                    <div ng-repeat="customField in freediver.customFieldListOfDive">
+                    <div ng-repeat="customField in existingCustomFieldDiveMap">
                         <md-input-container > 
                             <label>{{customField}}</label> 
                             <input name="{{customField}}" ng-model="customFieldDiveMap[customField]"/>
