--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -436,7 +436,7 @@
                             <div><span class="pe-7s-phone"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Field customization [in progress]</h3>
+                            <h3><span>/</span>Field customization</h3>
                             <p>APP-NEA will support data field customization. Freediver will be able to create custom field both for dive session and dive.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
