--- a/Server-side/war/webclient/index.html
+++ b/Server-side/war/webclient/index.html
@@ -15,7 +15,7 @@
         <meta name="revisit-after" content="7 days" />
         <link rel="canonical" href="https://app-nea-it.appspot.com/" />
         
-        <meta name="viewport" content="width=device-width" content="initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
      
         <!-- app-nea custom css -->
         <link rel="stylesheet" href="src/shared/custom.css">
