--- a/Server-side/war/webclient/src/dive/dive_detail_view.html
+++ b/Server-side/war/webclient/src/dive/dive_detail_view.html
@@ -51,7 +51,7 @@
                     <div layout="row"> 
                         <!--div class="input-group" moment-picker="diveTime" format="HH:mm" min-view="hour" start-view="day" default-date={{diveDate}}-->
                             <md-input-container>
-                                <label>HH</label> 
+                                <label>HH&#42;</label> 
                                 <md-select ng-model="dive.timeHour" required>
                                     <md-option ng-repeat="hour in h24 track by $index" value="{{hour}}">
                                     {{hour}}
@@ -59,7 +59,7 @@
                                 </md-select>
                             </md-input-container>
                             <md-input-container>
-                                <label>MM</label>
+                                <label>MM&#42;</label>
                                 <md-select ng-model="dive.timeMinute" required>
                                     <md-option ng-repeat="minute in m60 track by $index" value="{{minute}}">
                                     {{minute}}
@@ -70,7 +70,7 @@
                     </div>
                    
                     <md-input-container>
-                        <label>Dive Type</label>
+                        <label>Dive Type&#42;</label>
                         <md-select ng-model="dive.diveType" required>
                           <md-option ng-repeat="type in diveTypes track by $index" value="{{type}}">
                             {{type}}
