--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -817,6 +817,16 @@
     <script src="js/script.js"></script>
 
 
+            
+<!-- Begin Cookie Consent script http://cookie-consent.org/ -->
+<script type="text/javascript">
+    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"cookie-policy.html","theme":"dark-bottom"}; var cookieconsent_id = '957dd63e-6c61-4742-9d09-5c3ade2f2f33';</script>
+
+<script type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.3.js"></script>
+
+<noscript><a href="http://cookie-consent.org/">EU cookie consent script</a></noscript>
+<!-- End Cookie Consent script -->
+
 
 </body>
 <!--  google analytics -->
