Implemented cookie policy in angular app

--- a/Server-side/war/index.html
+++ b/Server-side/war/index.html
@@ -437,7 +437,7 @@
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
                             <h3><span>/</span>Field customization</h3>
-                            <p>APP-NEA will support data field customization. Freediver will be able to create custom field both for dive session and dive.</p>
+                            <p>APP-NEA supports data field customization. Freediver will be able to create custom field both for dive session and dive.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
                         
@@ -820,7 +820,7 @@
             
 <!-- Begin Cookie Consent script http://cookie-consent.org/ -->
 <script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"cookie-policy.html","theme":"dark-bottom"}; var cookieconsent_id = '957dd63e-6c61-4742-9d09-5c3ade2f2f33';</script>
+    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"/webclient/cookie-policy.html","theme":"dark-bottom"}; var cookieconsent_id = '957dd63e-6c61-4742-9d09-5c3ade2f2f33';</script>
 
 <script type="text/javascript" src="//cdn.front.to/libs/cookieconsent.min.3.js"></script>
 
